Fixed parallax scrolling jumping randomly sometimes
Also added icons

--- a/src/Details.module.css
+++ b/src/Details.module.css
@@ -49,6 +49,7 @@
 .tabContents{
     width: 40%;
     align-self: center;
+    height: 100%;
 }
 
 .tab{
